# KenshiLib

./: .gitignore  CMakeLists.txt  KenshiLib.vcxproj  KenshiLib.vcxproj.filters  README.md  Reversing_notes.txt
Examples/: Examples.sln
Examples/BasicExample/: BasicExample.vcxproj
Include/: MyGUIHooks.h  Release_Assert.h  stdafx.h
Include/core/: Hooker.h  RVA.h  Scanner.h  md5.h  md5_loc.h
Include/kenshi/: Bounty.h  BountyManager.h  Building.h  CharStats.h  Character.h  CharacterAnimal.h  CharacterHuman.h  Dialogue.h  Enums.h  Faction.h  FactionLeader.h  FitnessSelector.h  GameData.h  GameDataManager.h  GameSaveState.h  GameWorld.h  GlobalConstants.h  Globals.h  InputHandler.h  InstanceID.h  Inventory.h  Item.h  Kenshi.h  KeyBind.h  Logger.h  MedicalSystem.h  ModInfo.h  PlayerInterface.h  Root.h  RootObject.h  RootObjectBase.h  SaveFileSystem.h  SaveInfo.h  SaveManager.h  Tasks.h  ThreadClass.h  TimeOfDay.h  TradeCulture.h  View.h  Zone.h
Include/kenshi/util/: Array2d.h  OgreUnordered.h  PerfTimer.h  StringPair.h  TimeOfDay.h  YesNoMaybe.h  functions.asm  functions.h  hand.h  lektor.h
Include/mygui/: AUTHORS  MyGUI_Align.h  MyGUI_Singleton.h
Include/ogre/: OgreBuildSettings.h  OgreGL3PlusBuildSettings.h  OgreLwString.h  OgreMesh.h  OgreWorkarounds.h
Include/ogre/RenderSystems/Direct3D11/: OgreD3D11Texture.h
Libraries/: CMakeLists.txt
Libraries/mygui/: CMakeLists.txt  MyGUIEngine_x64.def  MyGUIEngine_x64.exp  MyGUIEngine_x64.lib
Libraries/ogre/: CMakeLists.txt  OgreMain_x64.def
Source/: Debug.cpp  Kenshi.cpp  MyGUIHooks.cpp  Root.cpp
Source/core/: Hooker.cpp  RVA.cpp  Scanner.cpp  md5.cpp
Source/kenshi/: Inventory.cpp  Kenshi.cpp  UI.cpp  functions.asm
